# gnvim

./: .gitignore  CMakeLists.txt  Makefile.am  README.md  configure.ac  gnvim.desktop  mkycmflags  uk.co.realh.gnvim.gschema.xml
src/: CMakeLists.txt  Makefile.am  adapter.cpp  adapter.h  app.cpp  app.h  appmenu.ui  buffer.cpp  buffer.h  bufsandtabs.cpp  bufsandtabs.h  cell-attributes.cpp  cell-attributes.h  dcs-dialog.cpp  dcs-dialog.h  defns.h  exampleapplication.cc  exampleapplication.h  exampleappwindow.cc  exampleappwindow.h  examplemain.cc  ext-types.cpp  ext-types.h  gnvim-signals.py  gnvim.gresource.xml  main.cpp  msgpack-adapter.cpp  msgpack-adapter.h  msgpack-error.h  msgpack-promise.h  msgpack-rpc.cpp  msgpack-rpc.h  nvim-bridge.cpp  nvim-bridge.cpp.in  nvim-bridge.h  nvim-bridge.h.in  nvim-grid-view.cpp  nvim-grid-view.h  nvim-grid-widget.cpp  nvim-grid-widget.h  (+17 more)
