bin_PROGRAMS = gnvim

gnvim_SOURCES = \
	app.cpp			app.h			\
	buffer.cpp		buffer.h		\
	defns.h						\
	main.cpp					\
	msgpack-adapter.cpp	msgpack-adapter.h	\
	msgpack-promise.h				\
	msgpack-rpc.cpp		msgpack-rpc.h		\
	nvim-bridge.cpp		nvim-bridge.h		\
	view.cpp		view.h			\
	window.cpp		window.h

gnvim_LDFLAGS = $(gnvim_LIBS)
