bin_PROGRAMS = gnvim

gnvim_SOURCES = \
	app.cpp			app.h			\
	buffer.cpp		buffer.h		\
	cell-attributes.cpp	cell-attributes.h	\
	defns.h						\
	main.cpp					\
	msgpack-adapter.cpp	msgpack-adapter.h	\
	msgpack-promise.h				\
	msgpack-rpc.cpp		msgpack-rpc.h		\
	nvim-bridge.cpp		nvim-bridge.h		\
	nvim-grid-view.cpp	nvim-grid-view.h	\
	text-grid.cpp		text-grid.h		\
	text-grid-view.cpp	text-grid-view.h	\
	window.cpp		window.h

gnvim_CXXFLAGS = $(gnvim_CFLAGS)
gnvim_LDFLAGS = $(gnvim_LIBS)
